--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', Helvetica, Arial, sans-serif, system-ui;
       background: #000;
       color: #fff;
-      line-height: 1.6; /* 본문 전체 가독성 개선 */
     }
 
     a {
@@ -54,14 +53,13 @@
 
     .fluid {
       font-size: clamp(4rem, 12vw, 12rem);
-      line-height: 1.2; /* 제목 줄간격 넓힘 */
+      line-height: 0.6;
       margin: 0;
     }
 
     h2.fluid {
       font-size: clamp(0.5rem, 2vw, 1.5rem);
       padding-top: 48px;
-      line-height: 1.4; /* 소제목도 가독성 개선 */
     }
 
     /* Section setup */
@@ -71,4 +69,178 @@
 
     .content {
       min-height: 100vh;
-      width:
+      width: 100vw;
+      display: flex;
+      place-items: center;
+      align-content: center;
+      position: sticky;
+      top: 0;
+      overflow: hidden;
+    }
+
+    main section:last-of-type {
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+    }
+
+    /* Grid Layout */
+    .grid {
+      --offset: 0;
+      --container-width: 1600px;
+      --gap: clamp(10px, 7.35vw, 80px);
+
+      width: var(--container-width);
+      max-width: calc(100% - (2 * var(--gutter)));
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(3, auto);
+      gap: var(--gap);
+      margin: 0 auto;
+      align-content: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      translate: -50% -50%;
+    }
+
+    @media (max-width: 600px) {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
+        --offset: -1;
+      }
+      .grid > .layer:nth-of-type(1) {
+        display: none;
+      }
+    }
+
+    .grid > .layer {
+      display: grid;
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      grid-template-columns: subgrid;
+      grid-template-rows: subgrid;
+    }
+
+    .grid > .layer:nth-of-type(1) div:nth-of-type(odd) {
+      grid-column: 1;
+    }
+    .grid > .layer:nth-of-type(1) div:nth-of-type(even) {
+      grid-column: -2;
+    }
+
+    .grid > .layer:nth-of-type(2) div:nth-of-type(odd) {
+      grid-column: calc(2 + var(--offset));
+    }
+    .grid > .layer:nth-of-type(2) div:nth-of-type(even) {
+      grid-column: calc(-3 - var(--offset));
+    }
+
+    .grid > .layer:nth-of-type(3) div:first-of-type {
+      grid-column: calc(3 + var(--offset));
+      grid-row: 1;
+    }
+    .grid > .layer:nth-of-type(3) div:last-of-type {
+      grid-column: calc(3 + var(--offset));
+      grid-row: -1;
+    }
+
+    .grid img {
+      width: 100%;
+      aspect-ratio: 4 / 5;
+      object-fit: cover;
+      border-radius: 1rem;
+    }
+
+    .grid .scaler {
+      position: relative;
+      grid-area: 2 / calc(3 + var(--offset));
+    }
+
+    .scaler {
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    .scaler img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      translate: -50% -50%;
+      object-fit: cover;
+      border-radius: 1rem;
+      width: 100%;
+      height: 100%;
+    }
+
+    /* Portfolio extra sections */
+    .portfolio-section {
+      padding: 60px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .portfolio-section h2 {
+      color: #4CAF50;
+      margin-bottom: 20px;
+    }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .project-card {
+      background: #111;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(255,255,255,0.1);
+    }
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+  <div class="content-wrap">
+    <header>
+      <h1 class="fluid">Minji<br />Portfolio</h1>
+      <h2 class="fluid">Scroll down to explore</h2>
+    </header>
+    <main>
+      <section>
+        <div class="content">
+          <div class="grid">
+            <!-- Layers with images (same as Codepen example) -->
+            <div class="layer">
+              <div><img src="https://images.unsplash.com/photo-1463100099107-aa0980c362e6?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1556304044-0699e31c6a34?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1590330297626-d7aff25a0431?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1487222477894-8943e31ef7b2?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1488161628813-04466f872be2?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1565321590372-09331b9dd1eb?w=800" alt="" /></div>
+            </div>
+            <div class="layer">
+              <div><img src="https://images.unsplash.com/photo-1531525645387-7f14be1bdbbd?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1637414165749-9b3cd88b8271?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1699911251220-8e0de3b5ce88?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1667483629944-6414ad0648c5?w=800" alt="" /></div>
+              <div><img src="https://plus.unsplash.com/premium_photo-1706078438060-d76ced26d8d5?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1525385444278-b7968e7e28dc?w=800" alt="" /></div>
+            </div>
+            <div class="layer">
+              <div><img src="https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg?w=800" alt="" /></div>
+              <div><img src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?w=800" alt="" /></div>
+            </div>
+            <div class="scaler">
+              <img src="https://assets.codepen.io/605876/model-shades.jpg?format=auto&quality=100" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2 class
